# image-gen-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
cli/: gemini-cli.py  gen_image.py  gen_image_gemini.py  gen_image_hunyuan.py  gen_image_mock.py  gen_image_qwen.py  hunyuan-cli.py  main-cli.py  mock-cli.py  qwen-cli.py
image_gen/: __init__.py  config.py  mcp.py
image_gen/backends/: __init__.py  base.py  gemini.py  gemini_backend.py  hunyuan.py  hunyuan_backend.py  mock.py  mock_backend.py  qwen.py  qwen_image_backend.py
imagen/: __init__.py  config.py  mcp.py
imagen/backends/: __init__.py  base.py  gemini.py  hunyuan.py  mock.py  qwen.py
tests/: test_backends_registry.py  test_cli.py  test_gemini_backend.py
