[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-gen-mcp"
version = "0.2.0"
description = "Simple MCP Server and HTTP API for image generation (Gemini + pluggable backends)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Image Generation MCP Server" }]
license = { text = "MIT" }
dependencies = [
  "google-genai>=1.36.0",
  "pillow>=10.0.0",
  "mcp>=1.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23"
]
qwen = [
  "diffusers>=0.26.0",
  "torch>=2.1.0",
  "accelerate>=0.30.0",
  "safetensors>=0.4.2",
  "peft>=0.17.0"
]
hunyuan = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "torchaudio>=2.1.0",
  "diffusers>=0.32.0",
  "huggingface-hub>=0.34.0",
  "transformers[accelerate,tiktoken]>=4.56.0",
  "einops>=0.7.0",
  "omegaconf>=2.3.0",
  "loguru>=0.7.0",
  "safetensors>=0.4.5",
  "numpy>=1.26.0",
  "tqdm>=4.65.0",
  "modelscope>=1.18.0"
]

[project.scripts]
image-gen = "cli.main_cli:main"
image-gen-mcp = "imagen.mcp:main"
image-gen-mock = "cli.mock_cli:main"
image-gen-gemini = "cli.gemini_cli:main"
image-gen-qwen = "cli.qwen_cli:main"
image-gen-hunyuan = "cli.hunyuan_cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools]
packages = { find = { include = ["imagen*", "cli*"] } }
